update icon and index

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Luisa R. Carable | IT Student • Project Manager • UI/UX Designer</title>
+    <title>Carable_Portfolio</title>
     <meta name="description" content="Portfolio of Luisa R. Carable - Information Technology student specializing in UI/UX design, web development, project management, and digital content creation. Pasig City Scholar at PUP San Juan." />
     <meta name="author" content="Luisa R. Carable" />
     <meta name="keywords" content="IT student, UI/UX designer, project manager, web developer, Figma, social media editor, graphic designer, PUP, Pasig City Scholar" />
