No Lovable trace when sending link

--- a/index.html
+++ b/index.html
@@ -11,11 +11,7 @@
     <meta property="og:title" content="Luisa R. Carable | IT Student • Project Manager • UI/UX Designer" />
     <meta property="og:description" content="Merging technology, creativity, and storytelling to craft meaningful digital experiences. Portfolio showcasing web development, UI/UX design, and project management work." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:url" content="https://luisarcarable.works/" />
   </head>
 
   <body>
