--- a/index.html
+++ b/index.html
@@ -3,15 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Carable_Portfolio</title>
-    <meta name="description" content="Portfolio of Luisa R. Carable - Information Technology student specializing in UI/UX design, web development, project management, and digital content creation. Pasig City Scholar at PUP San Juan." />
-    <meta name="author" content="Luisa R. Carable" />
-    <meta name="keywords" content="IT student, UI/UX designer, project manager, web developer, Figma, social media editor, graphic designer, PUP, Pasig City Scholar" />
+    <title>Luisa R. Carable | IT Student • Project Manager • UI/UX</title>
+    <meta name="description" content="Portfolio of Luisa R. Carable—projects, case studies, and contact." />
 
-    <meta property="og:title" content="Luisa R. Carable | IT Student • Project Manager • UI/UX Designer" />
-    <meta property="og:description" content="Merging technology, creativity, and storytelling to craft meaningful digital experiences. Portfolio showcasing web development, UI/UX design, and project management work." />
+    <!-- Open Graph -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://luisarcarable.works/" />
+    <meta property="og:title" content="Luisa R. Carable | IT Student • Project Manager • UI/UX" />
+    <meta property="og:description" content="Portfolio of Luisa R. Carable—projects, case studies, and contact." />
+    <meta property="og:image" content="https://luisarcarable.works/og-image.jpg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Luisa R. Carable | IT Student • Project Manager • UI/UX" />
+    <meta name="twitter:description" content="Portfolio of Luisa R. Carable—projects, case studies, and contact." />
+    <meta name="twitter:image" content="https://luisarcarable.works/og-image.jpg" />
   </head>
 
   <body>
